force-app/main/default/objects/KimbleOne__ResourceType__c/KimbleOne__ResourceType__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Resource Type</label>
    <nameField>
        <label>ResourceType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>