force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__CalculateAggregateUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CalculateAggregateUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Aggregate Usage</label>
    <type>Checkbox</type>
</CustomField>