force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__CostType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Z_Obsolete - Cost Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ResourceTypeCostType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resource Types</relationshipLabel>
    <relationshipName>ResourceTypes</relationshipName>
    <type>Lookup</type>
</CustomField>