force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__EarliestCalculationEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestCalculationEffectiveDate__c</fullName>
    <label>Earliest Calculation Effective Date</label>
    <type>Date</type>
</CustomField>