force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__HasMembers__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasMembers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Members</label>
    <type>Checkbox</type>
</CustomField>