force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__IsAssignable__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsAssignable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assignable</label>
    <type>Checkbox</type>
</CustomField>