force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__IsDemand__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsDemand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Demand</label>
    <type>Checkbox</type>
</CustomField>