force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__IsGeneric__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsGeneric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic</label>
    <type>Checkbox</type>
</CustomField>