force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__IsModellable__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsModellable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Model Assignments</label>
    <type>Checkbox</type>
</CustomField>