force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__MaximumUtilisationPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MaximumUtilisationPercentage__c</fullName>
    <label>Maximum Utilisation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>