force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__PortalEnabled__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PortalEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Resources of this type can be either portal users or platform users.</description>
    <label>Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>