force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__ResourceStandardCostCalcMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceStandardCostCalcMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Standard Cost Calc Method</label>
    <referenceTo>KimbleOne__ResourceStandardCostCalcMethod__c</referenceTo>
    <relationshipLabel>Resource Types</relationshipLabel>
    <relationshipName>ResourceTypes</relationshipName>
    <type>Lookup</type>
</CustomField>