force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__ResourceStandardRevenueCalcMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceStandardRevenueCalcMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Standard Revenue Calc Method</label>
    <referenceTo>KimbleOne__ResourceStandardRevenueCalcMethod__c</referenceTo>
    <relationshipLabel>Resource Types</relationshipLabel>
    <relationshipName>ResourceTypes</relationshipName>
    <type>Lookup</type>
</CustomField>