force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__StandardCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardCost__c</fullName>
    <label>Z_Obsolete - StandardCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>