force-app/main/default/objects/KimbleOne__ResourceType__c/fields/KimbleOne__StandardCostUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardCostUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Standard Cost Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resource Types</relationshipLabel>
    <relationshipName>ResourceTypes</relationshipName>
    <type>Lookup</type>
</CustomField>