force-app/main/default/objects/KimbleOne__ResourceType__c/validationRules/KimbleOne__CostTypeIsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__CostTypeIsMandatory</fullName>
    <active>false</active>
    <description>Z_Obsolete - CostTypeIsMandatory</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>obsolete</errorMessage>
</ValidationRule>