force-app/main/default/objects/KimbleOne__ResourceType__c/validationRules/KimbleOne__ResourceClassIsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ResourceClassIsMandatory</fullName>
    <active>false</active>
    <description>Z_Obsolete - ResourceClassIsMandatory</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>obsolete</errorMessage>
</ValidationRule>