force-app/main/default/objects/KimbleOne__ResourceType__c/validationRules/KimbleOne__StandardCostMandatoryForCostType.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__StandardCostMandatoryForCostType</fullName>
    <active>false</active>
    <description>Z_Obsolete - StandardCostMandatoryForCostType</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>obsolete</errorMessage>
</ValidationRule>