force-app/main/default/objects/KimbleOne__ResourceType__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__IsGeneric__c</columns>
    <columns>KimbleOne__IsDemand__c</columns>
    <columns>KimbleOne__HasMembers__c</columns>
    <columns>KimbleOne__ResourceStandardCostCalcMethod__c</columns>
    <columns>KimbleOne__ResourceStandardRevenueCalcMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>